--- a/package.json
+++ b/package.json
@@ -5,10 +5,9 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon index.js"
+    "start": "nodemon src/app.js"
   },
-  "author": "Marcos Brandon",
-  "license": "MIT",
+  "author": "Sparck Code",
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.18.2",
